# tiny-rust-bot

./: Cargo.toml  README.md
src/: bot.rs  err.rs  extra.rs  main.rs
